tests/compile/schema_does_not_exist.stderr
error: the previous schema does not exists
 --> tests/compile/schema_does_not_exist.rs:8:12
  |
8 |     #[from(Foo)]
  |            ^^^
